# chobits

./: .envrc  .git-commit-template.txt  .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  application-example.toml  eslint.config.cjs  faq.html  flake.nix  index.html  lefthook.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  print.html  rust-toolchain.toml  searcher-c2a407aa.js  searchindex-c5c42b1f.js  toc-d4d8851c.js  toc.html  tsconfig.base.json  tsconfig.json
apps/server/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  moon.yml  project.json
apps/server/api/: Cargo.toml
apps/server/api/locales/: en.yml  zh.yml
apps/server/api/src/: auth.rs  auth_error.rs  i18n.rs  index.rs  lib.rs  ota.rs  ota_data.rs  ota_error.rs  server.rs  tts.rs  ws.rs
apps/server/api/src/asr/: asr_cache.rs  mod.rs
apps/server/api/src/asr/model/: mod.rs
apps/server/api/src/asr/model/qwen3/: mod.rs
apps/server/api/src/asr/whisper/: mod.rs
apps/server/api/src/common/: mod.rs
apps/server/api/src/config/: asr.rs  audio.rs  check.rs  database.rs  llm.rs  logic.rs  manager.rs  matrix.rs  mcp.rs  mod.rs  server.rs  session.rs  tts.rs  vad.rs  ws.rs
apps/server/api/src/error/: mod.rs
apps/server/api/src/llm/: chat.rs  client.rs  mod.rs
apps/server/api/src/llm/model/: mod.rs  token_converter.rs
apps/server/api/src/matrix/: client.rs
apps/server/api/src/mcp/: mcp_host.rs  mod.rs
apps/server/api/src/mcp/client/: device.rs  mod.rs  server.rs
apps/server/api/src/mcp/tool/: administrator.rs  calculator.rs  mod.rs
apps/server/api/src/record/: collector.rs  mod.rs  observer.rs  wav.rs
apps/server/api/src/tts/: mod.rs
apps/server/api/src/tts/model/: mod.rs
apps/server/api/src/util/: audio.rs  compressor.rs  mod.rs
apps/server/api/src/vad/: mod.rs  vad_cache.rs
apps/server/api/src/vad/model/: mod.rs
apps/server/api/src/ws/: asr.rs  asr_cache.rs  frame.rs  handler.rs  listener.rs  message_converter.rs  mod.rs  sender.rs  session.rs  state.rs  tts.rs  tts_cache.rs  vad.rs  vad_cache.rs
apps/server/api/src/ws/asr/: asr_cache.rs  mod.rs
apps/server/api/src/ws/common/: mod.rs
apps/server/api/src/ws/llm/: client.rs  llm_cache.rs  mod.rs
apps/server/api/src/ws/mcp/: device.rs  mod.rs
apps/server/api/src/ws/session/: listener.rs  mod.rs  output_controller.rs  round.rs  trace.rs
apps/server/api/src/ws/tts/: mod.rs  tts_cache.rs
apps/server/api/src/ws/util/: llm.rs
apps/server/api/src/ws/vad/: mod.rs
apps/server/api/tests/: asr_test.rs  audio_test.rs  chat_test.rs  concurrent_test.rs  dao_test.rs  feature_auth_test.rs  feature_communication_connect_test.rs  index_test.rs  listener_test.rs  llm_client_test.rs  llm_model_test.rs  llm_test.rs  llm_util_test.rs  mcp_test.rs  mod.rs  session_test.rs  stream_test.rs  token_converter_test.rs  tts_analysis_test.rs  tts_test.rs  vad_analysis_test.rs  vad_test.rs  ws_test.rs
apps/server/api/tests/common/: asr.rs  mod.rs  router_client.rs  tts.rs  vad.rs
apps/server/api/tests/features/auth/: auth.feature
apps/server/api/tests/features/communication/: connect.feature
apps/server/api/tests/session/: asr.rs  chat.rs  helpers.rs  mcp.rs  mod.rs  record.rs  tts.rs
apps/server/build_metadata/: Cargo.toml  build.rs  mod.rs
apps/server/docs/: flow.md  note.txt
apps/server/entity/: Cargo.toml  README.md
apps/server/entity/src/: config.rs  frame.rs  lib.rs  prelude.rs  round.rs  round_data.rs  schema.rs  session.rs  user.rs
apps/server/framework/: Cargo.toml
apps/server/framework/src/: auth.rs  database.rs  error.rs  i18n.rs  id.rs  lib.rs  middleware.rs
apps/server/framework/src/config/: auth.rs  database.rs  mod.rs  server.rs  ws.rs
apps/server/framework/src/data/: mod.rs  path.rs  serder.rs  valid.rs
apps/server/macros/: Cargo.toml
apps/server/macros/src/: mod.rs  utils.rs
apps/server/migration/: Cargo.toml
apps/server/migration/src/: lib.rs  m20241230_000001_init.rs
apps/server/script/: download_device_assets.sh  download_model.sh  download_test_model.sh
apps/server/service/: Cargo.toml
apps/server/service/src/: lib.rs
apps/server/service/src/chobits/message/: abort.rs  audio.rs  close.rs  hello.rs  listen.rs  llm.rs  mcp.rs  mod.rs  stt.rs  tts.rs
apps/server/service/src/ws/: frame.rs
apps/server/service/tests/: dao_test.rs
apps/server/service/tests/common/: mod.rs
apps/server/src/: clap.rs  main.rs  mod.rs  restart.rs  runtime.rs  server.rs  signal.rs
apps/server/src/download/: mod.rs  tests.rs
apps/server/src/download/manifests/asr/: qwen3.json  whisper.json
apps/server/src/download/manifests/llm/: qwen3.json
apps/server/src/download/manifests/reference/: audio.json
apps/server/src/download/manifests/tts/: pocket-tts.json  voxcpm.json
apps/server/src/download/manifests/vad/: silero.json
apps/server/src/downloader/: mod.rs  tests.rs
apps/server/src/downloader/manifests/asr/: paraformer.json  qwen3.json  sense_voice.json  whisper.json  zipformer.json
apps/server/src/downloader/manifests/llm/: qwen3.json
apps/server/src/downloader/manifests/reference/: audio.json
apps/server/web/: Cargo.toml  dist
apps/server/web/src/: lib.rs
libs/framework/: Cargo.toml
libs/framework/macros/: Cargo.toml
libs/framework/macros/src/: lib.rs
libs/framework/src/: auth.rs  database.rs  deadlock.rs  i18n.rs  lib.rs  logging.rs  middleware.rs  panic.rs  password.rs  prelude.rs  runtime.rs  sentry.rs  signal.rs  trace.rs
libs/framework/src/config/: auth.rs  logging.rs  mod.rs  sentry.rs
libs/framework/src/data/: json.rs  mod.rs  path.rs  query.rs  serder.rs  valid.rs
libs/framework/src/error/: auth_code.rs  base_code.rs  critical_code.rs  framework_code.rs  mod.rs  third_party_code.rs
libs/framework/src/info/: version.rs
libs/framework/src/log/: color.rs  console.rs  fmt.rs  fmt_span.rs  mod.rs  reload.rs  suppress.rs
libs/framework/src/log/capture/: data.rs  guard.rs  layer.rs  mod.rs  state.rs  util.rs
libs/framework/src/utils/: mod.rs  restart.rs  sys.rs
libs/framework/src/utils/sys/: compute.rs
(+391 files in other folders)
