[workspace]
resolver = '2'
members = ['apps/server']

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["lastsunday"]

[workspace.dependencies]
axum = "0.8.8"
axum-extra = "0.12.5"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
config = "0.15.19"
serde = "1.0.228"
serde_yaml = "0.9.34"
anyhow = "1.0.101"
sea-orm = "2.0.0-rc.31"
sea-orm-migration = "2.0.0-rc.31"
thiserror = "2.0.18"
tower-http = "0.6.8"
tower-layer = "0.3.3"
xid = "1.1.1"
idgenerator = "2.0.0"
bytesize = "2.3.1"
validator = "0.20.0"
axum-valid = "0.24.0"
regex = "1.12.3"
bcrypt = "0.18.0"
jsonwebtoken = "10.3.0"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-scalar = "0.3.0"
serde_json = "1.0.149"
serde-aux = "4.7.0"
http-body-util = "0.1.3"
mime = "0.3.17"
chrono = "0.4.43"
testcontainers = "0.26.3"
testcontainers-modules = "0.14.0"
rust-i18n = "3.1.5"
futures-util = "0.3.31"
futures-channel = "0.3.31"
jiff = "0.2.19"
opus = "0.3.1"
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
futures = "0.3.31"
openssl = "0.10.75"
async-trait = "0.1.89"
uuid = "1.20.0"
async-std = "1.13.2"
num_cpus = "1.17.0"
rust-embed = "8.11.0"
git2 = "0.20.4"
ssh-key = "0.6.7"
# audio start
symphonia = "0.5.5"
wavers = "1.5.1"
# audio end
# llm start
candle-core = "0.9.1"
candle-transformers = "0.9.1"
candle-onnx = "0.9.1"
candle-nn = "0.9.1"
tokenizers = "0.22.2"
fancy-regex = "0.17.0"
intel-mkl-src = "0.8.1"
accelerate-src = "0.3.2"
rig-core = "0.30.0"
aha = "0.1.8"
aha_openai_dive = "1.4.0"
bindgen_cuda = "=0.1.5"
# llm end
# asr start
byteorder = "1.5.0"
rand = "0.10.0"
rand_distr = "0.6.0"
# asr end
# tts start
kokoro-tts = "0.3.2"
# tts end
# mcp start
rmcp = "0.15.0"
sse-stream = "0.2.1"
# mcp end
tracing-test = "0.2.6"
# dev start
tower = "0.5.3"
cucumber = "0.22.1"
# dev end

[profile.dev]
opt-level = 1

[profile.test]
# speed up test case (special for llm) 
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 8
strip = true
debug = false
