[package]
name = "chobits-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false


[dependencies]
api = { path = "api" }
# llm start
candle-core = { workspace = true }
candle-transformers = { workspace = true }
candle-nn = { workspace = true }
tokenizers = { workspace = true, features = ["fancy-regex"] }
intel-mkl-src = { workspace = true, features = [
  "mkl-static-lp64-iomp",
], optional = true }
accelerate-src = { workspace = true, optional = true }
aha = { workspace = true }
# llm end

[build-dependencies]
# llm start
bindgen_cuda = { workspace = true, optional = true }
# llm end

[features]
default = []
vendored-openssl = []
cuda = [
  "candle-core/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda",
  "dep:bindgen_cuda",
  "aha/cuda",
]
