[package]
name = "chobits-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/mod.rs"
crate-type = [
  "rlib",
  #	"dylib",
]
[dependencies]
api = { path = "api" }
framework = { path = "../../libs/framework" }
# log start
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
color-eyre = { workspace = true }
tracing-error = { workspace = true }
# log end
figment = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true, features = ["parse"] }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
# llm start
candle-core = { workspace = true }
candle-transformers = { workspace = true }
candle-nn = { workspace = true }
tokenizers = { workspace = true, features = ["fancy-regex"] }
intel-mkl-src = { workspace = true, features = [
  "mkl-static-lp64-iomp",
], optional = true }
accelerate-src = { workspace = true, optional = true }
aha = { workspace = true }
# llm end
clap = { workspace = true, features = [
  "derive",
  "env",
  "error-context",
  "help",
  "std",
  "string",
  "usage",
] }
# download start
reqwest = { workspace = true, features = ["rustls-tls"] }
include_dir = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures-util = { workspace = true }
jiff = { workspace = true }
# download end

[dev-dependencies]
mockito = { workspace = true }

[build-dependencies]
# llm start
bindgen_cuda = { workspace = true, optional = true }
# llm end

[features]
default = []
vendored-openssl = []
cuda = [
  "candle-core/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda",
  "dep:bindgen_cuda",
  "aha/cuda",
]
