[package]
name = "framework"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chobits-framework-macros = { package = "framework-macros", path = "macros" }
chobits-build-metadata = { workspace = true }
xid = { workspace = true }
bcrypt = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-valid = { workspace = true, features = ["full_validator"] }
tracing = { workspace = true, features = ["async-await"] }
tower-http = { workspace = true, features = [
  "trace",
  "timeout",
  "limit",
  "cors",
  "normalize-path",
  "auth",
  "compression-full",
] }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
tracing-error = { workspace = true, features = ["traced-error"] }
validator = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
jsonwebtoken = { workspace = true }
sea-orm = { workspace = true, features = [
  "with-chrono",
  "debug-print",
  "sqlx-postgres",
  "sqlx-sqlite",
  "with-rust_decimal",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "debug", "chrono"] }
num_cpus = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
core_affinity = { workspace = true }
