[package]
name = "framework"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chobits-framework-macros = { package = "framework-macros", path = "macros" }
chobits-build-metadata = { workspace = true }
xid = { workspace = true }
bcrypt = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-valid = { workspace = true, features = ["full_validator"] }
tracing = { workspace = true, features = ["async-await"] }
tower-http = { workspace = true, features = [
  "trace",
  "timeout",
  "limit",
  "cors",
  "normalize-path",
  "auth",
  "compression-full",
] }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
tracing-error = { workspace = true, features = ["traced-error"] }
validator = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
jsonwebtoken = { workspace = true }
sea-orm = { workspace = true, features = [
  "with-chrono",
  "debug-print",
  "sqlx-postgres",
  "sqlx-sqlite",
  "with-rust_decimal",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "debug", "chrono"] }
num_cpus = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
core_affinity = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros"] }
tracing-core = "0.1"
parking_lot = { workspace = true, features = ["deadlock_detection"] }
backtrace = { workspace = true }
arrayvec = { workspace = true }
async-trait = { workspace = true }

# optional feature gates
nix = { workspace = true, optional = true }
sentry = { workspace = true, optional = true }
sentry-tracing = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-flame = { workspace = true, optional = true }
tracing-journald = { workspace = true, optional = true }
console-subscriber = { workspace = true, optional = true }

[features]
default = []
sentry = ["dep:sentry", "dep:sentry-tracing"]
otlp = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  "dep:tracing-opentelemetry",
]
perf = ["dep:tracing-flame"]
console = ["dep:console-subscriber", "tokio_unstable"]
journald = ["dep:tracing-journald"]
tokio_unstable = []
jemalloc = []
