[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "ws"] }
axum-extra = { version = "0.12.3", features = ["typed-header"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
config = { version = "0.15.19", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
anyhow = { version = "1.0.100" }
sea-orm = { version = "1.1.19", features = [
  "with-chrono",
  "debug-print",
  "sqlx-postgres",
  "sqlx-sqlite",
  "with-rust_decimal",
  "runtime-tokio-rustls",
  "macros",
] }
thiserror = { version = "2.0.17" }
tower-http = { version = "0.6.8", features = [
  "trace",
  "timeout",
  "limit",
  "cors",
  "normalize-path",
  "auth",
  "compression-full",
] }
tower-layer = { version = "0.3.3" }
xid = { version = "1.1.1" }
bytesize = { version = "2.3.1" }
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = { version = "0.24.0", features = ["full_validator"] }
regex = { version = "1.12.2" }
bcrypt = { version = "0.17.1" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "debug", "chrono"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
serde_json = "1.0.147"
serde-aux = { version = "4.7.0" }
http-body-util = "0.1.3"
mime = "0.3"
chrono = "0.4.42"
testcontainers = "0.26.3"
testcontainers-modules = { version = "0.14.0", features = [
  "postgres",
  "gitea",
] }
rust-i18n = { version = "3.1.5" }
futures-util = { version = "0.3.31", default-features = false, features = [
  "sink",
  "std",
] }
futures-channel = { version = "0.3.31" }
jiff = { version = "0.2.17" }
opus = { version = "0.3.0" }
tokio-stream = { version = "0.1.17" }
tokio-util = { version = "0.7.17" }
futures = { version = "0.3.31" }
openssl = { version = "0.10.75", features = ["vendored"] }
async-trait = { version = "0.1.89" }
# audio start
symphonia = { version = "0.5.5" }
wavers = { version = "1.5.1" }
# audio end
# llm start
candle-core = { version = "0.9.1" }
tokenizers = { version = "0.22.2", default-features = false, features = [
  "fancy-regex",
] }
candle-transformers = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
fancy-regex = { version = "0.17.0" }
intel-mkl-src = { version = "0.8.1", features = [
  "mkl-static-lp64-iomp",
], optional = true }
accelerate-src = { version = "0.3.2", optional = true }
candle-onnx = { version = "0.9.1" }
rig-core = { version = "0.26.0" }
aha = { version = "0.1.7" }
aha_openai_dive = { version = "1.4.0", features = ["stream"] }
# llm end
# asr start
byteorder = { version = "1.5.0" }
rand = { version = "0.9.2" }
rand_distr = { version = "0.5.1" }
# asr end
# tts start
kokoro-tts = { version = "0.3.1" }
# tts end
# mcp start
rmcp = { version = "0.11.0", features = [
  "transport-streamable-http-server",
  "client",
  "transport-streamable-http-client",
  "reqwest",
  "transport-streamable-http-client-reqwest",
] }
sse-stream = { version = "0.2.1" }
# mcp end

tracing-test = { version = "0.2.5" }
entity = { path = "../entity" }
migration = { path = "../migration" }
service = { path = "../service" }
framework = { path = "../framework" }
web = { path = "../web" }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
cucumber = { version = "0.22.1", features = ["tracing", "output-json"] }
futures = "0.3.31"

[build-dependencies]
# llm start
bindgen_cuda = { version = "0.1.5", optional = true }
# llm end

[features]
default = []
vendored-openssl = []
# llm start
accelerate = [
  "dep:accelerate-src",
  "candle-core/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]
mkl = [
  "dep:intel-mkl-src",
  "candle-core/mkl",
  "candle-nn/mkl",
  "candle-transformers/mkl",
]
cuda = [
  "candle-core/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda",
  "dep:bindgen_cuda",
  "aha/cuda",
]
# llm end
