[package]
name = "api"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
service = { path = "../service" }
framework = { path = "../../../libs/framework" }
web = { path = "../web" }
chobits-macros = { workspace = true }

axum = { workspace = true, features = ["macros", "ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
tokio = { workspace = true, features = ["full"] }
# log start
tracing = { workspace = true, features = ["async-await"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
# log end
# config start
config = { workspace = true, features = ["yaml"] }
figment = { workspace = true, features = ["env", "toml"] }
either = { workspace = true, features = ["serde"] }
# config end
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true, features = [
  "with-chrono",
  "debug-print",
  "sqlx-postgres",
  "sqlx-sqlite",
  "with-rust_decimal",
  "runtime-tokio-rustls",
  "macros",
] }
thiserror = { workspace = true }
tower-http = { workspace = true, features = [
  "trace",
  "timeout",
  "limit",
  "cors",
  "normalize-path",
  "auth",
  "compression-full",
] }
tower-layer = { workspace = true }
xid = { workspace = true }
bytesize = { workspace = true }
validator = { workspace = true, features = ["derive"] }
axum-valid = { workspace = true, features = ["full_validator"] }
regex = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
utoipa = { workspace = true, features = ["axum_extras", "debug", "chrono"] }
utoipa-axum = { workspace = true, features = ["debug"] }
utoipa-scalar = { workspace = true, features = ["axum"] }
serde_json = { workspace = true }
serde-aux = { workspace = true }
http-body-util = { workspace = true }
mime = { workspace = true }
chrono = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres", "gitea"] }
rust-i18n = { workspace = true }
futures-util = { workspace = true, features = ["sink", "std"] }
futures-channel = { workspace = true }
jiff = { workspace = true }
opus-rs = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
openssl = { workspace = true, features = ["vendored"] }
async-trait = { workspace = true }
# audio start
symphonia = { workspace = true }
wavers = { workspace = true }
resampler = { workspace = true }
# audio end
# llm start
candle-core = { workspace = true }
tokenizers = { workspace = true, features = ["fancy-regex"] }
candle-transformers = { workspace = true }
candle-nn = { workspace = true }
fancy-regex = { workspace = true }
intel-mkl-src = { workspace = true, features = [
  "mkl-static-lp64-iomp",
], optional = true }
accelerate-src = { workspace = true, optional = true }
candle-onnx = { workspace = true }
rig-core = { workspace = true }
aha = { workspace = true }
aha_openai_dive = { workspace = true, features = ["stream"] }
# llm end
# asr start
byteorder = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
qwen-asr = { workspace = true }
# asr end
# vad start
earshot = { workspace = true }
# vad end
# tts end
# mcp start
rmcp = { workspace = true, features = [
  "transport-streamable-http-server",
  "client",
  "transport-streamable-http-client",
  "reqwest",
  "transport-streamable-http-client-reqwest",
] }
sse-stream = { workspace = true }
# mcp end
# matrix start
ruma = { workspace = true, features = ["client-api-c", "rand"] }
ruma-client = { workspace = true, features = [
  "client-api",
  "hyper-native-tls",
] }
hyper = { workspace = true }
# matrix end

tracing-test = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
cucumber = { workspace = true, features = ["tracing", "output-json"] }
futures = { workspace = true }

[build-dependencies]
# llm start
bindgen_cuda = { workspace = true, optional = true }
# llm end

[features]
default = []
vendored-openssl = []
# llm start
accelerate = [
  "dep:accelerate-src",
  "candle-core/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]
mkl = [
  "dep:intel-mkl-src",
  "candle-core/mkl",
  "candle-nn/mkl",
  "candle-transformers/mkl",
]
cuda = [
  "candle-core/cuda",
  "candle-nn/cuda",
  "candle-transformers/cuda",
  "dep:bindgen_cuda",
  "aha/cuda",
]
# llm end
