[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
sea-orm = { version = "1.1.17" }
chrono = "0.4.42"
utoipa = { version = "5.4.0", features = ["axum_extras", "debug", "chrono"] }
framework = { path = "../framework" }
