[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "debug", "chrono"] }
framework = { path = "../framework" }
