[package]
name = "entity"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "debug", "chrono"] }
framework = { path = "../../../libs/framework" }
