[package]
name = "framework"
version = "0.1.0"
edition = "2024"

[dependencies]
xid = { version = "1.1.1" }
bcrypt = { version = "0.17.1" }
axum = { version = "0.8.8", features = ["macros"] }
axum-valid = { version = "0.24.0", features = ["full_validator"] }
tracing = { version = "0.1.44", features = ["async-await"] }
tower-http = { version = "0.6.8", features = [
  "trace",
  "timeout",
  "limit",
  "cors",
  "normalize-path",
  "auth",
  "compression-full",
] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = { version = "2.0.17" }
anyhow = { version = "1.0.100" }
jsonwebtoken = { version = "10.2.0" }
sea-orm = { version = "1.1.19", features = [
  "with-chrono",
  "debug-print",
  "sqlx-postgres",
  "sqlx-sqlite",
  "with-rust_decimal",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
utoipa = { version = "5.4.0", features = ["axum_extras", "debug", "chrono"] }
config = { version = "0.15.19", features = ["yaml"] }
num_cpus = { version = "1.17.0" }
