[package]
name = "framework"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
xid = { workspace = true }
bcrypt = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-valid = { workspace = true, features = ["full_validator"] }
tracing = { workspace = true, features = ["async-await"] }
tower-http = { workspace = true, features = [
  "trace",
  "timeout",
  "limit",
  "cors",
  "normalize-path",
  "auth",
  "compression-full",
] }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
validator = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
sea-orm = { workspace = true, features = [
  "with-chrono",
  "debug-print",
  "sqlx-postgres",
  "sqlx-sqlite",
  "with-rust_decimal",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "debug", "chrono"] }
config = { workspace = true, features = ["yaml"] }
num_cpus = { workspace = true }
