[package]
name = "chobits_macros"
edition.workspace = true
version.workspace = true

[lib]
name = "chobits_macros"
path = "src/mod.rs"
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
itertools = { workspace = true }

[lints]
