[package]
name = "service"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "debug-print",
] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
rmcp = { workspace = true }
migration = { path = "../migration" }
entity = { path = "../entity" }
framework = { path = "../framework" }

[features]
default = []
