[package]
name = "service"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "debug-print",
] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rmcp = { workspace = true }
migration = { path = "../migration" }
entity = { path = "../entity" }
framework = { path = "../../../libs/framework" }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
