[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["macros"] }
rust-embed = { workspace = true, features = [
  "axum",
  "axum-ex",
  "tokio",
  "compression",
  "debug-embed",
  "include-exclude",
  "include-flate",
  "interpolate-folder-path",
  "mime-guess",
] }
