[package]
name = "web"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
axum = { workspace = true, features = ["macros"] }
rust-embed = { workspace = true, features = [
  "axum",
  "axum-ex",
  "tokio",
  "compression",
  "debug-embed",
  "include-exclude",
  "include-flate",
  "interpolate-folder-path",
  "mime-guess",
] }
